Fixed z-index for links list

--- a/src/index.scss
+++ b/src/index.scss
@@ -96,8 +96,6 @@ svg {
   }
 
   .logo {
-    z-index: 3;
-
     #page-logo {
       position: absolute;
       width: 50rem;
